fixed button alignment

--- a/index.css
+++ b/index.css
@@ -15,6 +15,8 @@ body{
 
 header {
 	background-color: blue;
+	padding: 0;
+	margin: 0;
 
 }
 
@@ -78,4 +80,8 @@ header h1{
 .odd-gpio-check {
 	display: flex;
 	justify-content: space-between;
+}
+
+.even-gpio-check {
+	display: flex;
 }
